infra/k8s/overlays/dev/patch-backend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visioncount-backend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 300m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 2Gi
