infra/k8s/overlays/dev/patch-frontend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visioncount-frontend
spec:
  replicas: 1
